force-app/main/default/objects/used_car__c/used_car__c.object-meta.xml
<CustomObject>
    <description>中古車（唄）</description>
    <label>中古車</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>中古車</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>