force-app/main/default/objects/used_car__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>国</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>中古車</relationshipLabel>
    <relationshipName>Country</relationshipName>
    <type>Lookup</type>
</CustomField>