force-app/main/default/objects/used_car__c/fields/Details_Notes__c.field-meta.xml
<CustomField>
    <fullName>Details_Notes__c</fullName>
    <label>備考（装備等）</label>
    <type>TextArea</type>
</CustomField>