force-app/main/default/objects/used_car__c/fields/Export_Methods__c.field-meta.xml
<CustomField>
    <fullName>Export_Methods__c</fullName>
    <label>輸出方法</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RORO</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Cut</fullName>
            </value>
            <value>
                <fullName>Parts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>