force-app/main/default/objects/used_car__c/fields/Fuel_Types__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Types__c</fullName>
    <label>ガソリン</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>希望なし</fullName>
            </value>
            <value>
                <fullName>ガソリン</fullName>
            </value>
            <value>
                <fullName>ディーゼル</fullName>
            </value>
            <value>
                <fullName>ハイブリッド</fullName>
            </value>
            <value>
                <fullName>LPG</fullName>
            </value>
            <value>
                <fullName>電気</fullName>
            </value>
            <value>
                <fullName>CNG</fullName>
            </value>
            <value>
                <fullName>電気・ガソリン</fullName>
            </value>
            <value>
                <fullName>圧縮水素</fullName>
            </value>
            <value>
                <fullName>ガソリン・LPG</fullName>
            </value>
            <value>
                <fullName>CNG・ガソリン</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>