force-app/main/default/objects/used_car__c/fields/Heavy_Equipment_Types__c.field-meta.xml
<CustomField>
    <fullName>Heavy_Equipment_Types__c</fullName>
    <label>車両形状（重機）</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>希望なし</fullName>
            </value>
            <value>
                <fullName>油圧ショベル</fullName>
            </value>
            <value>
                <fullName>ミニ油圧ショベル</fullName>
            </value>
            <value>
                <fullName>ホイールローダー</fullName>
            </value>
            <value>
                <fullName>ブルドーザー</fullName>
            </value>
            <value>
                <fullName>ローラー</fullName>
            </value>
            <value>
                <fullName>クレーン</fullName>
            </value>
            <value>
                <fullName>フィニッシャー</fullName>
            </value>
            <value>
                <fullName>グレーダー</fullName>
            </value>
            <value>
                <fullName>キャリアダンプ</fullName>
            </value>
            <value>
                <fullName>環境機械</fullName>
            </value>
            <value>
                <fullName>基礎機会</fullName>
            </value>
            <value>
                <fullName>発電機</fullName>
            </value>
            <value>
                <fullName>溶接機</fullName>
            </value>
            <value>
                <fullName>投光器</fullName>
            </value>
            <value>
                <fullName>コンプレッサー</fullName>
            </value>
            <value>
                <fullName>パーツ/その他建機</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>