force-app/main/default/objects/used_car__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>会員（台帳連携項目）</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>中古車</relationshipLabel>
    <relationshipName>member_used_car</relationshipName>
    <type>Lookup</type>
</CustomField>