force-app/main/default/objects/used_car__c/fields/Mileage_Records_Max__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Records_Max__c</fullName>
    <label>走行距離（未満）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>希望なし</fullName>
            </value>
            <value>
                <fullName>10,000km未満</fullName>
            </value>
            <value>
                <fullName>20,000km未満</fullName>
            </value>
            <value>
                <fullName>30,000km未満</fullName>
            </value>
            <value>
                <fullName>40,000km未満</fullName>
            </value>
            <value>
                <fullName>50,000km未満</fullName>
            </value>
            <value>
                <fullName>60,000km未満</fullName>
            </value>
            <value>
                <fullName>70,000km未満</fullName>
            </value>
            <value>
                <fullName>80,000km未満</fullName>
            </value>
            <value>
                <fullName>90,000km未満</fullName>
            </value>
            <value>
                <fullName>100,000km未満</fullName>
            </value>
            <value>
                <fullName>150,000km未満</fullName>
            </value>
            <value>
                <fullName>500,000km未満</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>