force-app/main/default/objects/used_car__c/fields/Models__c.field-meta.xml
<CustomField>
    <fullName>Models__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>車種</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Mst_Models__c.maker__r.disp_flg__c</field>
            <operation>equals</operation>
            <value>表示する</value>
        </filterItems>
        <filterItems>
            <field>Mst_Models__c.disp_flg__c</field>
            <operation>equals</operation>
            <value>表示する</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Mst_Models__c</referenceTo>
    <relationshipLabel>中古車</relationshipLabel>
    <relationshipName>Models_Used1</relationshipName>
    <type>Lookup</type>
</CustomField>