force-app/main/default/objects/used_car__c/fields/Month_Purchases1__c.field-meta.xml
<CustomField>
    <fullName>Month_Purchases1__c</fullName>
    <label>月購入台数（販路1）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>