force-app/main/default/objects/used_car__c/fields/Month_Purchases2__c.field-meta.xml
<CustomField>
    <fullName>Month_Purchases2__c</fullName>
    <label>月購入台数（販路2）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>