force-app/main/default/objects/used_car__c/fields/Other_Vehicle_Types__c.field-meta.xml
<CustomField>
    <fullName>Other_Vehicle_Types__c</fullName>
    <label>その他　車両形状等</label>
    <type>TextArea</type>
</CustomField>