force-app/main/default/objects/used_car__c/fields/Port1__c.field-meta.xml
<CustomField>
    <fullName>Port1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>向け地1</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>中古車</relationshipLabel>
    <relationshipName>Port1</relationshipName>
    <type>Lookup</type>
</CustomField>