force-app/main/default/objects/used_car__c/fields/Port2__c.field-meta.xml
<CustomField>
    <fullName>Port2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>向け地2</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>中古車 (港)</relationshipLabel>
    <relationshipName>Port2</relationshipName>
    <type>Lookup</type>
</CustomField>