force-app/main/default/objects/used_car__c/fields/Sales_Channel2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel2__c</fullName>
    <label>販路2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>オークション再販</fullName>
            </value>
            <value>
                <fullName>小売</fullName>
            </value>
            <value>
                <fullName>業販</fullName>
            </value>
            <value>
                <fullName>輸出</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>