force-app/main/default/objects/used_car__c/fields/Steering_Position__c.field-meta.xml
<CustomField>
    <fullName>Steering_Position__c</fullName>
    <label>ハンドル</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>希望なし</fullName>
            </value>
            <value>
                <fullName>左</fullName>
            </value>
            <value>
                <fullName>右</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>