force-app/main/default/objects/used_car__c/fields/Transmission__c.field-meta.xml
<CustomField>
    <fullName>Transmission__c</fullName>
    <label>シフト</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>希望なし</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>4MT</fullName>
            </value>
            <value>
                <fullName>5MT</fullName>
            </value>
            <value>
                <fullName>6MT</fullName>
            </value>
            <value>
                <fullName>7MT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>