force-app/main/default/objects/used_car__c/fields/Vehicle_Features__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Features__c</fullName>
    <label>装備情報</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>希望なし</fullName>
            </value>
            <value>
                <fullName>パワーステアリング</fullName>
            </value>
            <value>
                <fullName>パワーウィンドウ</fullName>
            </value>
            <value>
                <fullName>パワースライドドア</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>アルミホイール</fullName>
            </value>
            <value>
                <fullName>サンルーフ</fullName>
            </value>
            <value>
                <fullName>皮シート</fullName>
            </value>
            <value>
                <fullName>アルカンターラシート</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>ナビ</fullName>
            </value>
            <value>
                <fullName>スペアキー</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>