force-app/main/default/objects/used_car__c/fields/Year1_note__c.field-meta.xml
<CustomField>
    <fullName>Year1_note__c</fullName>
    <label>年式　備考</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>