force-app/main/default/objects/used_car__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Channel1__c</columns>
    <columns>Month_Purchases1__c</columns>
    <columns>Sales_Channel2__c</columns>
    <columns>Month_Purchases2__c</columns>
    <columns>Export_Methods__c</columns>
    <columns>Cut_Types__c</columns>
    <columns>Stock_Locations__c</columns>
    <columns>Model_Types__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべてのレコード</label>
</ListView>